Untitled
javascript, js engines

it is Object oriented
Objects
builtin objects
environmentbased objects
used defned objects

JavaScript is dynamically typed
it is interpreted


declare variables
var - data coercion and data hoisting  --disadv
let, const

example:
var x = 10;
typeof(x)
x = [1,2,3]
typeof(x)
x = function add(){};
typeof(x)
x = 'Man';
typeof(x)
x = 23.4;
typeof(x)
x = true;
typeof(x)


-----------------------------------

> const a = 10;
undefined
> const a = 10;
Uncaught SyntaxError: Identifier 'a' has already been declared
> typeof(a)
'number'
> x=[1,2,3]
[ 1, 2, 3 ]
> x=[1,2,3]
[ 1, 2, 3 ]
> x=[1,2,3];
[ 1, 2, 3 ]
> x=[1,2,3];
[ 1, 2, 3 ]
> x=[1,2,3]
[ 1, 2, 3 ]
> const x=[1,2,3]
undefined
> stu = {name:'manish', mark:72}
{ name: 'manish', mark: 72 }
> stu.mark=100;
100
> stu.age=12;
12
> stu
{ name: 'manish', mark: 100, age: 12 }
----------------------------------------

> var a = null;
undefined
> var b = undefined;
undefined
> a == b;
true
> a === b;
false
> a !== null
false
> b !== null
true
> var onj1 = {};
undefined
> var obj1 = {};
undefined
> typeof(obj1)
'object'
> obj1.x=10;
10
> obj1.y=20;
20
> obj1
{ x: 10, y: 20 }
> Object.keys
[Function: keys]
> Object.keys(obj1);
[ 'x', 'y' ]
> Object.values(obj1);
[ 10, 20 ]

> obj1.z=78;
78
> obj1
{ x: 10, y: 20, z: 78 }
> let str = {name: 'manish', age : 12}
undefined
> str
{ name: 'manish', age: 12 }
> str.name
'manish'
> str['marks']=67
67
> str
{ name: 'manish', age: 12, marks: 67 }
> str.['city']='Hyderabad'
str.['city']='Hyderabad'
    ^

Uncaught SyntaxError: Unexpected token '['
> str.city='Hyderabad'
'Hyderabad'
> str
{ name: 'manish', age: 12, marks: 67, city: 'Hyderabad' }
>
-----------------------------------------

> var robot1={
| name:'chitti'
| model:'GH67'
model:'GH67'
^^^^^

Uncaught SyntaxError: Unexpected identifier 'model'
> var robot1={
| name:'chitti'
| model:'GH67'}
model:'GH67'}
^^^^^

Uncaught SyntaxError: Unexpected identifier 'model'
> var robot1={
| name:'chitti',
| model:'GH67'}
undefined
> robot1
{ name: 'chitti', model: 'GH67' }
> var rb1 = Object.freeze(robot1);
undefined
> rb1
{ name: 'chitti', model: 'GH67' }
> robot1
{ name: 'chitti', model: 'GH67' }
> rb1.weight=567;
567
> rb1
{ name: 'chitti', model: 'GH67' }
> robot1.weight=567;
567
> var obj1 = {x:10, y:20}
undefined
> var obj2 = {x:10, y:25, z:30}
undefined
> var res = Object.assign(obj1, obj2);
undefined
> obj1;
{ x: 10, y: 25, z: 30 }
> obj2;
{ x: 10, y: 25, z: 30 }
> res
{ x: 10, y: 25, z: 30 }
> obj1
{ x: 10, y: 25, z: 30 }
> obj4={k:89};
{ k: 89 }
> var res = Object.assign(obj1.obj4);
Uncaught TypeError: Cannot convert undefined or null to object
    at Object.assign (<anonymous>)
> var res = Object.assign(obj1,obj4);
undefined
> obj1
{ x: 10, y: 25, z: 30, k: 89 }

-------------------------------------------------


> var arr1=[]
undefined
> typeof(arr1)
'object'
> arr1[0] = 43;
43
> arr1[1] = 46;
46
> arr1[2] = 49;
49
> arr1
[ 43, 46, 49 ]
> arr1.length
3
> arr1[4] = [1,2,3];
[ 1, 2, 3 ]
> arr1
[ 43, 46, 49, <1 empty item>, [ 1, 2, 3 ] ]
> arr1[3] = 'Hai'
'Hai'
> arr1
[ 43, 46, 49, 'Hai', [ 1, 2, 3 ] ]
> arr1[5] = {name:'Alice', age:12}
{ name: 'Alice', age: 12 }
> arr1
[ 43, 46, 49, 'Hai', [ 1, 2, 3 ], { name: 'Alice', age: 12 } ]
> arr1[5]
{ name: 'Alice', age: 12 }
> let arr2 = [1,2,3]
undefined
> arr2
[ 1, 2, 3 ]
> arr2[1] = 22
22
> arr2
[ 1, 22, 3 ]
> arr2.length
3
> arr2[100] = 89
89
> arr2.length
101
>

> var arr=new Array(3);
undefined
> arr
[ <3 empty items> ]
> arr[0] = 2
2
> arr[0] = 1
1
> arr[4] = 5
5
> var arr = new Array(10)
undefined
> arr.length
10
> var arr1 = new Array(1,2,3,4,5)
undefined
> arr1
[ 1, 2, 3, 4, 5 ]
>
-------------------------------------------------------------------------





